# c-programming

./: CMakeLists.txt  README.md  flash_addresses_pointers.swc  quiz 1 question.txt  review_quiz1.html  review_quiz2.html  review_quiz2_v3.html
HW1_hal/stln/: Makefile.hw1  hal  hal_main.c  hw01-tester.c
HW2_skynet/: hw02_skynet.html  sample_output.txt  skynet_main.c
HW2_weather/: weather.c  weather.h
HW3_packets/: hw03_packets.html
HW3_packets/Debug/: packets.d
HW3_strings/: Strings_lecture.ppt  hw03-tester.c  stringsPic.ppt
HW4_pointers/: pointers2_sln.c
HW4_pointers/Debug/: sources.mk
HW4_pointers/Debug/Sltn/: subdir.mk
HW4_pointers/Debug/Supplied/: demo.d
HW4_pointers/Supplied/Backup/: debug.c  pointers-pre2007Spring.c  pointers2.c
HW4_pointers/Supplied/Scratch/: demo  stuff.c
HW4_pointers/hw04tester/: testPointerToVowel.h  testReverse.h
HW5_tokenizer/Debug/: sources.mk  tokenizer_main.d
HW5_tokenizer/grader/: testGetChar.c  testGetWord.c
HW5_tokenizer/stln/: test.txt  tokenizer  tokenizer.h
HW6_weather/Debug/: sources.mk
HW6_weather/Debug/Sltn/: weatherFunctions.d
HW6_weather/Debug/Supplied/: subdir.mk
HW6_weather/Sltn/: sample_interactions.txt  weather.h
HW6_weather/Supplied/: weatherFunctions.c
HW7_malloc/: .project
HW7_malloc/Sltn/: Makefile  hw07-tester  hw07-tester.c  malloc.c
HW7_malloc/Supplied/: index.html
LAB1_bowling/: bowling_ans.c  play.c  struct_example.c  structs.html
LAB2_pointers/Supplied/: pointers_lab.c
LAB3_lego_mindstorms/: LegoLab1.html  NeXTTool
a-Spring_07/: array-ints2.c  bowling.c  gdb.html  gdb.txt  lab_example.c  lab_example_sol.c  play2.c  resources.shtml  segfault.c  strings_lab.html  struct_lab.html
a-Spring_07/c++/: index.shtml  infoAboutC++ (1).shtml
a-Spring_07/c++/DemoCode/: IntCell.cpp  hello  hello.c
a-Spring_07/c++/Sltn/: IntLinkedList.cpp  IntLinkedList.h
a-Spring_07/hw3/: strings.c  strings_ans.c
a-Spring_07/testers/: hw01-tester.c  hw02-tester.c  hw03-tester.c  hw05-tester.c
b-Fall_07/: review_quiz1.html  review_quiz2.html  review_quiz3.html
b-Fall_07/calc/: calc.c  calc.h
b-Fall_07/pointers/: hw02-tester.c  hw02_packets.html  packets  packets.c  packets.h  packets.ppt  packets_sol.c  packets_sol_nomalloc.c  packets_tester.sh  test.txt
b-Fall_07/strings/: strings.c  strings_sln.c  tokenizer.html
c-Spring_08/: example_output2.txt  flash_addresses_pointers.html  flash_addresses_pointers.swf  flash_pointers.html  hal.c  hal.h  hal_sln.c  pointers2.c  review_quiz3.html  review_quiz4.html  sample_output.txt
c-Spring_08/ESE116HW1/: .cproject  hal.c  hw01_hal.html
c-Spring_08/ESE116HW1/Debug/: hal.d  makefile  sources.mk  subdir.mk
c-Spring_08/ESE116HW1/stln/: a.out  hal_sln.c  hw01-tester.c
c-Spring_08/ESE116HW2/: hw02_skynet.html  skynet  skynet.c
c-Spring_08/ESE116HW2/Debug/: subdir.mk
c-Spring_08/ESE116HW2/stln/: skynet  skynet_sln.c
c-Spring_08/ESE116HW2_skynet/: sample_output.txt  skynet.h
c-Spring_08/ESE116HW2_skynet/Debug/: ESE116HW1
c-Spring_08/ESE116HW3/: packets.h  sample_output.txt
c-Spring_08/ESE116HW3/Debug/: ESE116HW1  skynet.d  subdir.mk
c-Spring_08/ESE116HW3/stln/: packets.c
c-Spring_08/ESE116HW3_packets/: hw02-tester.c  packets  packets.c
c-Spring_08/ESE116HW3_packets/stln/: packets
c-Spring_08/ESE116HW4/: a.out  sample_output.txt  tokenizer
c-Spring_08/ESE116HW4/Debug/: ESE116HW1  makefile  strings_sln.d  subdir.mk
c-Spring_08/ESE116HW4/stln/: stringsPic.ppt
c-Spring_08/ESE116HW4_tokenizer/: .project  tokenizer.c  tokenizer.h
c-Spring_08/ESE116HW8/: embed.c  extract.c  go1  input.txt  tokenizer.html
c-Spring_08/ESE116HW8_tokenizer/: go2
c-Spring_08/ESE116HW8_tokenizer/Debug/: subdir.mk
c-Spring_08/ctester/ctester_v1/: cassert.c  ctester.c  ctester.h
c-Spring_08/ctester/ctester_v2/: Makefile  ctester-defs.h  ctester.c
c-Spring_08/ctester/ctester_v3/: README
c-Spring_08/ctesterTutorial/: Makefile.hw1  grading_tutorial.html  hw01.conf
c-Spring_08/testers/: hw01-tester.c  hw02-tester.c
cpp_intro/DemoCode/: hello.cpp
ctester/ctester_v1/: cassert.h
ctester/ctester_v2/html/: ctester_8h-source.html  files.html  index.html
ctester/ctester_v3/: dox_ctester.config
ctester/ctester_v3/ctesterTutorial/: hal.c  hal.h  hw01-tester.c  hw01.conf
ctester/ctester_v3/src/: cassert.c  ctester.h
d-Fall_08/: review_quiz2_v2.html
d-Fall_08/ESE116HW1/: .cproject  hal  hal.c  hw01_hal.html  sample_output.txt
d-Fall_08/ESE116HW2/: skynet.c  skynet.h
d-Fall_08/ESE116HW2/Debug/: skynet_main.d
d-Fall_08/ESE116HW2/stln/: Makefile.hw2  hw02-tester.c  sample_output.txt  skynet  skynet.c  skynet.h  skynet_main.c
d-Fall_08/ESE116HW2_skynet/Debug/: ESE116HW1  subdir.mk
d-Fall_08/ESE116HW4/: index.shtml
d-Fall_08/ESE116HW4/Debug/: makefile
d-Fall_08/ESE116HW4/Supplied/: demo.c  pointers.c
d-Fall_08/ESE116HW5/: .cproject  tokenizer.c  tokenizer.html
d-Fall_08/ESE116HW5/Debug/: makefile  subdir.mk  tokenizer.d
d-Fall_08/ESE116HW5/grader/: Makefile.hw5  hw05-tester  hw05-tester.c  hw05.conf  testGetChar.h  testGetWord.h  testSortAndDeleteDuplicates.c  testSortAndDeleteDuplicates.h  tokenizer.h
d-Fall_08/ESE116HW5/stln/: tokenizer.c  tokenizer_main.c
d-Fall_08/ESE116HW6/: index.shtml
d-Fall_08/ESE116HW6/Debug/: makefile
d-Fall_08/ESE116HW6/Sltn/: testInput.txt  weather  weatherFunctions.c
d-Fall_08/ESE116HW6/Supplied/: Makefile  weatherTest.c
d-Fall_08/ESE116HW7/: .cproject
d-Fall_08/hw04tester/: Makefile.hw4  hw04-tester  hw04-tester.c  hw04.conf  pointers.c  pointers.h  pointers_main.c  testPointerToLastWord.c  testPointerToLastWord.h  testPointerToVowel.c  testReverse.c
d-Fall_08/lab 1 - unix/: unixGettingStarted.html
e-Spring_09/GettingStarted_version3/: index.shtml
e-Spring_09/LegoLab1/: lab1.nxc  nbc  t2n
e-Spring_09/ctesterTutorial/: Makefile.hw1  grading_tutorial.html
hw2/: Makefile.htm  testInput.txt
orphans/: hw04-tester.c  quiz3notes-jean_orig.html  quiz3notes-luke_orig.html
quiz_review/: review_quiz2.html
slides/: Strings.ppt  packets.ppt
(+135 files in other folders)
