cmake_minimum_required(VERSION 3.6)
project(c_programming)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    a-Spring_07/c++/DemoCode/hello
    a-Spring_07/c++/DemoCode/hello.c
    a-Spring_07/c++/DemoCode/hello.cpp
    a-Spring_07/c++/DemoCode/IntCell.cpp
    a-Spring_07/c++/Sltn/IntLinkedList.cpp
    a-Spring_07/c++/Sltn/IntLinkedList.h
    a-Spring_07/c++/index.shtml
    "a-Spring_07/c++/infoAboutC++ (1).shtml"
    a-Spring_07/c++/infoAboutC++.shtml
    a-Spring_07/hw2/Makefile.htm
    a-Spring_07/hw2/testInput.txt
    a-Spring_07/hw2/weather.c
    a-Spring_07/hw2/weather.h
    a-Spring_07/hw3/strings.c
    a-Spring_07/hw3/strings_ans.c
    a-Spring_07/testers/hw01-tester.c
    a-Spring_07/testers/hw02-tester.c
    a-Spring_07/testers/hw03-tester.c
    a-Spring_07/testers/hw04-tester.c
    a-Spring_07/testers/hw05-tester.c
    a-Spring_07/array-ints2.c
    a-Spring_07/bowling.c
    a-Spring_07/bowling_ans.c
    a-Spring_07/compiler_overview.jpg
    a-Spring_07/compiler_overview.png
    a-Spring_07/gdb.html
    a-Spring_07/gdb.txt
    a-Spring_07/lab_example.c
    a-Spring_07/lab_example_sol.c
    a-Spring_07/play.c
    a-Spring_07/play2.c
    a-Spring_07/programmer_hierarchy2.jpg
    a-Spring_07/programmer_hierarchy2.png
    a-Spring_07/resources.shtml
    a-Spring_07/segfault.c
    a-Spring_07/string_eg.jpg
    a-Spring_07/string_eg2.jpg
    a-Spring_07/string_eg3.jpg
    a-Spring_07/strings_lab.html
    a-Spring_07/struct_example.c
    a-Spring_07/struct_lab.html
    a-Spring_07/structs.html
    b-Fall_07/calc/calc.c
    b-Fall_07/calc/calc.h
    b-Fall_07/pointers/hw02-tester.c
    b-Fall_07/pointers/hw02_packets.html
    b-Fall_07/pointers/packet.jpg
    b-Fall_07/pointers/packet.png
    b-Fall_07/pointers/packets
    b-Fall_07/pointers/packets.c
    b-Fall_07/pointers/packets.h
    b-Fall_07/pointers/packets.ppt
    b-Fall_07/pointers/packets.zip
    b-Fall_07/pointers/packets_sol.c
    b-Fall_07/pointers/packets_sol_nomalloc.c
    b-Fall_07/pointers/packets_tester.sh
    b-Fall_07/pointers/pointers2.c
    b-Fall_07/pointers/pointers2_sln.c
    b-Fall_07/pointers/test.txt
    b-Fall_07/strings/hw03-tester.c
    b-Fall_07/strings/strings.c
    b-Fall_07/strings/Strings_lecture.ppt
    b-Fall_07/strings/strings_slides.pdf
    b-Fall_07/strings/strings_sln.c
    b-Fall_07/strings/stringsPic.gif
    b-Fall_07/strings/stringsPic.png
    b-Fall_07/strings/stringsPic.ppt
    b-Fall_07/strings/title.gif
    b-Fall_07/strings/tokenizer.html
    b-Fall_07/review_quiz1.html
    b-Fall_07/review_quiz2.html
    b-Fall_07/review_quiz3.html
    b-Fall_07/visual_stack.jpg
    b-Fall_07/visual_stack.png
    c-Spring_08/ctester/ctester_v1/cassert.c
    c-Spring_08/ctester/ctester_v1/cassert.h
    c-Spring_08/ctester/ctester_v1/ctester-defs.h
    c-Spring_08/ctester/ctester_v1/ctester.c
    c-Spring_08/ctester/ctester_v1/ctester.h
    c-Spring_08/ctester/ctester_v1/libctester.a
    c-Spring_08/ctester/ctester_v1/Makefile
    c-Spring_08/ctester/ctester_v2/html/cassert_8h-source.html
    c-Spring_08/ctester/ctester_v2/html/ctester-defs_8h-source.html
    c-Spring_08/ctester/ctester_v2/html/ctester_8h-source.html
    c-Spring_08/ctester/ctester_v2/html/doxygen.css
    c-Spring_08/ctester/ctester_v2/html/doxygen.png
    c-Spring_08/ctester/ctester_v2/html/files.html
    c-Spring_08/ctester/ctester_v2/html/index.html
    c-Spring_08/ctester/ctester_v2/latex/doxygen.sty
    c-Spring_08/ctester/ctester_v2/latex/Helvetica.ttf
    c-Spring_08/ctester/ctester_v2/latex/Makefile
    c-Spring_08/ctester/ctester_v2/latex/refman.tex
    c-Spring_08/ctester/ctester_v2/cassert.c
    c-Spring_08/ctester/ctester_v2/cassert.h
    c-Spring_08/ctester/ctester_v2/ctester-defs.h
    c-Spring_08/ctester/ctester_v2/ctester.c
    c-Spring_08/ctester/ctester_v2/ctester.h
    c-Spring_08/ctester/ctester_v2/libctester.a
    c-Spring_08/ctester/ctester_v2/Makefile
    c-Spring_08/ctester/ctester_v3/doc/html/annotated.html
    c-Spring_08/ctester/ctester_v3/doc/html/cassert_8c.html
    c-Spring_08/ctester/ctester_v3/doc/html/cassert_8h-source.html
    c-Spring_08/ctester/ctester_v3/doc/html/cassert_8h.html
    c-Spring_08/ctester/ctester_v3/doc/html/ctester-defs_8h-source.html
    c-Spring_08/ctester/ctester_v3/doc/html/ctester-defs_8h.html
    c-Spring_08/ctester/ctester_v3/doc/html/ctester_8c.html
    c-Spring_08/ctester/ctester_v3/doc/html/ctester_8h-source.html
    c-Spring_08/ctester/ctester_v3/doc/html/ctester_8h.html
    "c-Spring_08/ctester/ctester_v3/doc/html/doxygen (1).png"
    c-Spring_08/ctester/ctester_v3/doc/html/doxygen.css
    c-Spring_08/ctester/ctester_v3/doc/html/doxygen.png
    c-Spring_08/ctester/ctester_v3/doc/html/files.html
    c-Spring_08/ctester/ctester_v3/doc/html/functions.html
    c-Spring_08/ctester/ctester_v3/doc/html/functions_vars.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_defs.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_enum.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_eval.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_func.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_type.html
    c-Spring_08/ctester/ctester_v3/doc/html/globals_vars.html
    c-Spring_08/ctester/ctester_v3/doc/html/index.html
    c-Spring_08/ctester/ctester_v3/doc/html/struct__ct__str__buffer.html
    c-Spring_08/ctester/ctester_v3/doc/html/structproblem__t.html
    c-Spring_08/ctester/ctester_v3/doc/html/structtest__t.html
    c-Spring_08/ctester/ctester_v3/doc/html/tab_b.gif
    c-Spring_08/ctester/ctester_v3/doc/html/tab_l.gif
    c-Spring_08/ctester/ctester_v3/doc/html/tab_r.gif
    c-Spring_08/ctester/ctester_v3/doc/html/tabs.css
    c-Spring_08/ctester/ctester_v3/examples/hw01tests/calc.c
    c-Spring_08/ctester/ctester_v3/examples/hw01tests/calc.h
    c-Spring_08/ctester/ctester_v3/examples/hw01tests/hw01-tester.c
    c-Spring_08/ctester/ctester_v3/examples/hw01tests/hw01.conf
    c-Spring_08/ctester/ctester_v3/examples/hw01tests/Makefile.hw1
    c-Spring_08/ctester/ctester_v3/src/cassert.c
    c-Spring_08/ctester/ctester_v3/src/cassert.h
    c-Spring_08/ctester/ctester_v3/src/ctester-defs.h
    c-Spring_08/ctester/ctester_v3/src/ctester.c
    c-Spring_08/ctester/ctester_v3/src/ctester.h
    c-Spring_08/ctester/ctester_v3/src/libctester.a
    c-Spring_08/ctester/ctester_v3/src/Makefile
    c-Spring_08/ctester/ctester_v3/dox_ctester.config
    c-Spring_08/ctester/ctester_v3/libctester.a
    c-Spring_08/ctester/ctester_v3/README
    c-Spring_08/ctesterTutorial/doc/html/annotated.html
    c-Spring_08/ctesterTutorial/doc/html/cassert_8c.html
    c-Spring_08/ctesterTutorial/doc/html/cassert_8h-source.html
    c-Spring_08/ctesterTutorial/doc/html/cassert_8h.html
    c-Spring_08/ctesterTutorial/doc/html/ctester-defs_8h-source.html
    c-Spring_08/ctesterTutorial/doc/html/ctester-defs_8h.html
    c-Spring_08/ctesterTutorial/doc/html/ctester_8c.html
    c-Spring_08/ctesterTutorial/doc/html/ctester_8h-source.html
    c-Spring_08/ctesterTutorial/doc/html/ctester_8h.html
    c-Spring_08/ctesterTutorial/doc/html/doxygen.css
    c-Spring_08/ctesterTutorial/doc/html/doxygen.png
    c-Spring_08/ctesterTutorial/doc/html/files.html
    c-Spring_08/ctesterTutorial/doc/html/functions.html
    c-Spring_08/ctesterTutorial/doc/html/functions_vars.html
    c-Spring_08/ctesterTutorial/doc/html/globals.html
    c-Spring_08/ctesterTutorial/doc/html/globals_defs.html
    c-Spring_08/ctesterTutorial/doc/html/globals_enum.html
    c-Spring_08/ctesterTutorial/doc/html/globals_eval.html
    c-Spring_08/ctesterTutorial/doc/html/globals_func.html
    c-Spring_08/ctesterTutorial/doc/html/globals_type.html
    c-Spring_08/ctesterTutorial/doc/html/globals_vars.html
    c-Spring_08/ctesterTutorial/doc/html/index.html
    c-Spring_08/ctesterTutorial/doc/html/struct__ct__str__buffer.html
    c-Spring_08/ctesterTutorial/doc/html/structproblem__t.html
    c-Spring_08/ctesterTutorial/doc/html/structtest__t.html
    c-Spring_08/ctesterTutorial/doc/html/tab_b.gif
    c-Spring_08/ctesterTutorial/doc/html/tab_l.gif
    c-Spring_08/ctesterTutorial/doc/html/tab_r.gif
    c-Spring_08/ctesterTutorial/doc/html/tabs.css
    c-Spring_08/ctesterTutorial/grading_tutorial.html
    c-Spring_08/ctesterTutorial/hw01-tester.c
    c-Spring_08/ctesterTutorial/hw01.conf
    c-Spring_08/ctesterTutorial/Makefile.hw1
    c-Spring_08/ESE116HW1/Debug/stln/hal_sln.d
    c-Spring_08/ESE116HW1/Debug/stln/subdir.mk
    c-Spring_08/ESE116HW1/Debug/hal.d
    c-Spring_08/ESE116HW1/Debug/makefile
    c-Spring_08/ESE116HW1/Debug/objects.mk
    c-Spring_08/ESE116HW1/Debug/sources.mk
    c-Spring_08/ESE116HW1/Debug/subdir.mk
    c-Spring_08/ESE116HW1/stln/a.out
    c-Spring_08/ESE116HW1/stln/hal.h
    c-Spring_08/ESE116HW1/stln/hal_sln.c
    c-Spring_08/ESE116HW1/stln/hw01-tester.c
    c-Spring_08/ESE116HW1/stln/hw01.conf
    c-Spring_08/ESE116HW1/stln/Makefile.hw1
    c-Spring_08/ESE116HW1/hal.c
    c-Spring_08/ESE116HW1/hal.h
    c-Spring_08/ESE116HW1/hw01_hal.html
    c-Spring_08/ESE116HW1/sample_output.txt
    c-Spring_08/ESE116HW2/Debug/stln/skynet.c
    c-Spring_08/ESE116HW2/Debug/stln/skynet.h
    c-Spring_08/ESE116HW2/Debug/stln/subdir.mk
    c-Spring_08/ESE116HW2/Debug/ESE116HW1
    c-Spring_08/ESE116HW2/Debug/makefile
    c-Spring_08/ESE116HW2/Debug/objects.mk
    c-Spring_08/ESE116HW2/Debug/skynet.d
    c-Spring_08/ESE116HW2/Debug/sources.mk
    c-Spring_08/ESE116HW2/Debug/subdir.mk
    c-Spring_08/ESE116HW2/stln/skynet
    c-Spring_08/ESE116HW2/stln/skynet.h
    c-Spring_08/ESE116HW2/stln/skynet_sln.c
    c-Spring_08/ESE116HW2/hw02_skynet.html
    c-Spring_08/ESE116HW2/sample_output.txt
    c-Spring_08/ESE116HW2/skynet
    c-Spring_08/ESE116HW2/skynet.c
    c-Spring_08/ESE116HW2/skynet.h
    c-Spring_08/ESE116HW3/Debug/stln/skynet.c
    c-Spring_08/ESE116HW3/Debug/stln/skynet.h
    c-Spring_08/ESE116HW3/Debug/stln/subdir.mk
    c-Spring_08/ESE116HW3/Debug/ESE116HW1
    c-Spring_08/ESE116HW3/Debug/makefile
    c-Spring_08/ESE116HW3/Debug/objects.mk
    c-Spring_08/ESE116HW3/Debug/packets.d
    c-Spring_08/ESE116HW3/Debug/skynet.d
    c-Spring_08/ESE116HW3/Debug/sources.mk
    c-Spring_08/ESE116HW3/Debug/subdir.mk
    c-Spring_08/ESE116HW3/packets.dSYM/Contents/Resources/DWARF/packets
    c-Spring_08/ESE116HW3/packets.dSYM/Contents/Info.plist
    c-Spring_08/ESE116HW3/stln/packets.dSYM/Contents/Resources/DWARF/packets
    "c-Spring_08/ESE116HW3/stln/packets.dSYM/Contents/Info (1).plist"
    c-Spring_08/ESE116HW3/stln/packets.dSYM/Contents/Info.plist
    c-Spring_08/ESE116HW3/stln/packets
    c-Spring_08/ESE116HW3/stln/packets.c
    c-Spring_08/ESE116HW3/stln/packets.h
    c-Spring_08/ESE116HW3/hw03_packets.html
    c-Spring_08/ESE116HW3/packets
    c-Spring_08/ESE116HW3/packets.c
    c-Spring_08/ESE116HW3/packets.h
    c-Spring_08/ESE116HW3/packets_visual.png
    c-Spring_08/ESE116HW3/sample_output.txt
    c-Spring_08/ESE116HW4/Debug/ESE116HW1
    c-Spring_08/ESE116HW4/Debug/makefile
    c-Spring_08/ESE116HW4/Debug/objects.mk
    c-Spring_08/ESE116HW4/Debug/sources.mk
    c-Spring_08/ESE116HW4/Debug/strings_sln.d
    c-Spring_08/ESE116HW4/Debug/subdir.mk
    c-Spring_08/ESE116HW4/stln/stringsPic.ppt
    c-Spring_08/ESE116HW4/a.out
    c-Spring_08/ESE116HW4/sample_output.txt
    c-Spring_08/ESE116HW4/tokenizer
    c-Spring_08/ESE116HW4/tokenizer.c
    c-Spring_08/ESE116HW4/tokenizer.h
    c-Spring_08/ESE116HW4/tokenizer.html
    c-Spring_08/ESE116HW4/tokenizer_pic.png
    c-Spring_08/ESE116HW8/Debug/ESE116HW1
    c-Spring_08/ESE116HW8/Debug/makefile
    c-Spring_08/ESE116HW8/Debug/objects.mk
    c-Spring_08/ESE116HW8/Debug/sources.mk
    c-Spring_08/ESE116HW8/Debug/strings_sln.d
    c-Spring_08/ESE116HW8/Debug/subdir.mk
    c-Spring_08/ESE116HW8/clean.bmp
    c-Spring_08/ESE116HW8/dirty.bmp
    c-Spring_08/ESE116HW8/embed.c
    c-Spring_08/ESE116HW8/extract.c
    c-Spring_08/ESE116HW8/go1
    c-Spring_08/ESE116HW8/go2
    c-Spring_08/ESE116HW8/input.txt
    c-Spring_08/ESE116HW8/output.txt
    c-Spring_08/ESE116HW8/tokenizer.html
    c-Spring_08/ESE116HW8/tokenizer_pic.png
    c-Spring_08/testers/hw01-tester.c
    c-Spring_08/testers/hw02-tester.c
    c-Spring_08/compiler_overview.jpg
    "c-Spring_08/ESE 116 Spring 2008 Homework 2 SkyNet.pdf"
    "c-Spring_08/ESE 116 Spring 2008, Homework 1 HAL.pdf"
    c-Spring_08/example_output2.txt
    c-Spring_08/flash_addresses_pointers.fla
    c-Spring_08/flash_addresses_pointers.html
    c-Spring_08/flash_addresses_pointers.swc
    c-Spring_08/flash_addresses_pointers.swf
    c-Spring_08/flash_pointers.html
    c-Spring_08/hal.c
    c-Spring_08/hal.h
    c-Spring_08/hal_sln.c
    c-Spring_08/packets.ppt
    c-Spring_08/pointers2.c
    c-Spring_08/quiz3notes-jean_orig.html
    c-Spring_08/quiz3notes-luke_orig.html
    c-Spring_08/review_quiz2.html
    c-Spring_08/review_quiz3.html
    c-Spring_08/review_quiz4.html
    c-Spring_08/sample_output.txt
    c-Spring_08/skynet.c
    c-Spring_08/skynet.h
    c-Spring_08/Strings.ppt
    c-Spring_08/visual_stack.jpg
    ctester/ctester_v1/cassert.c
    ctester/ctester_v1/cassert.h
    ctester/ctester_v1/ctester-defs.h
    ctester/ctester_v1/ctester.c
    ctester/ctester_v1/ctester.h
    ctester/ctester_v1/libctester.a
    ctester/ctester_v1/Makefile
    ctester/ctester_v2/html/cassert_8h-source.html
    ctester/ctester_v2/html/ctester-defs_8h-source.html
    ctester/ctester_v2/html/ctester_8h-source.html
    ctester/ctester_v2/html/doxygen.css
    ctester/ctester_v2/html/doxygen.png
    ctester/ctester_v2/html/files.html
    ctester/ctester_v2/html/index.html
    ctester/ctester_v2/latex/doxygen.sty
    ctester/ctester_v2/latex/Helvetica.ttf
    ctester/ctester_v2/latex/Makefile
    ctester/ctester_v2/latex/refman.tex
    ctester/ctester_v2/cassert.c
    ctester/ctester_v2/cassert.h
    ctester/ctester_v2/ctester-defs.h
    ctester/ctester_v2/ctester.c
    ctester/ctester_v2/ctester.h
    ctester/ctester_v2/libctester.a
    ctester/ctester_v2/Makefile
    ctester/ctester_v3/doc/html/annotated.html
    ctester/ctester_v3/doc/html/cassert_8c.html
    ctester/ctester_v3/doc/html/cassert_8h-source.html
    ctester/ctester_v3/doc/html/cassert_8h.html
    ctester/ctester_v3/doc/html/ctester-defs_8h-source.html
    ctester/ctester_v3/doc/html/ctester-defs_8h.html
    ctester/ctester_v3/doc/html/ctester_8c.html
    ctester/ctester_v3/doc/html/ctester_8h-source.html
    ctester/ctester_v3/doc/html/ctester_8h.html
    ctester/ctester_v3/doc/html/doxygen.css
    ctester/ctester_v3/doc/html/doxygen.png
    ctester/ctester_v3/doc/html/files.html
    ctester/ctester_v3/doc/html/functions.html
    ctester/ctester_v3/doc/html/functions_vars.html
    ctester/ctester_v3/doc/html/globals.html
    ctester/ctester_v3/doc/html/globals_defs.html
    ctester/ctester_v3/doc/html/globals_enum.html
    ctester/ctester_v3/doc/html/globals_eval.html
    ctester/ctester_v3/doc/html/globals_func.html
    ctester/ctester_v3/doc/html/globals_type.html
    ctester/ctester_v3/doc/html/globals_vars.html
    ctester/ctester_v3/doc/html/index.html
    ctester/ctester_v3/doc/html/struct__ct__str__buffer.html
    ctester/ctester_v3/doc/html/structproblem__t.html
    ctester/ctester_v3/doc/html/structtest__t.html
    ctester/ctester_v3/doc/html/tab_b.gif
    ctester/ctester_v3/doc/html/tab_l.gif
    ctester/ctester_v3/doc/html/tab_r.gif
    ctester/ctester_v3/doc/html/tabs.css
    ctester/ctester_v3/examples/hw01tests/calc.c
    ctester/ctester_v3/examples/hw01tests/calc.h
    ctester/ctester_v3/examples/hw01tests/hw01-tester.c
    ctester/ctester_v3/examples/hw01tests/hw01.conf
    ctester/ctester_v3/examples/hw01tests/Makefile.hw1
    ctester/ctester_v3/src/cassert.c
    ctester/ctester_v3/src/cassert.h
    ctester/ctester_v3/src/ctester-defs.h
    ctester/ctester_v3/src/ctester.c
    ctester/ctester_v3/src/ctester.h
    ctester/ctester_v3/src/libctester.a
    ctester/ctester_v3/src/Makefile
    ctester/ctester_v3/dox_ctester.config
    ctester/ctester_v3/libctester.a
    ctester/ctester_v3/README
    d-Fall_08/ESE116HW1/stln/hal
    d-Fall_08/ESE116HW1/stln/hal.c
    d-Fall_08/ESE116HW1/stln/hal.h
    d-Fall_08/ESE116HW1/stln/hal_main.c
    d-Fall_08/ESE116HW1/stln/hw01-tester.c
    d-Fall_08/ESE116HW1/stln/Makefile.hw1
    d-Fall_08/ESE116HW1/hal
    d-Fall_08/ESE116HW1/hal.c
    d-Fall_08/ESE116HW1/hal.h
    d-Fall_08/ESE116HW1/hal_main.c
    d-Fall_08/ESE116HW1/hw01_hal.html
    d-Fall_08/ESE116HW1/sample_output.txt
    d-Fall_08/ESE116HW2/Debug/stln/skynet.c
    d-Fall_08/ESE116HW2/Debug/stln/skynet.h
    d-Fall_08/ESE116HW2/Debug/stln/subdir.mk
    d-Fall_08/ESE116HW2/Debug/ESE116HW1
    d-Fall_08/ESE116HW2/Debug/makefile
    d-Fall_08/ESE116HW2/Debug/objects.mk
    d-Fall_08/ESE116HW2/Debug/skynet.d
    d-Fall_08/ESE116HW2/Debug/skynet_main.d
    d-Fall_08/ESE116HW2/Debug/sources.mk
    d-Fall_08/ESE116HW2/Debug/subdir.mk
    d-Fall_08/ESE116HW2/stln/hw02-tester.c
    d-Fall_08/ESE116HW2/stln/Makefile.hw2
    d-Fall_08/ESE116HW2/stln/sample_output.txt
    d-Fall_08/ESE116HW2/stln/skynet
    d-Fall_08/ESE116HW2/stln/skynet.c
    d-Fall_08/ESE116HW2/stln/skynet.h
    d-Fall_08/ESE116HW2/stln/skynet_main.c
    d-Fall_08/ESE116HW2/hw02_skynet.html
    d-Fall_08/ESE116HW2/sample_output.txt
    d-Fall_08/ESE116HW2/skynet.c
    d-Fall_08/ESE116HW2/skynet.h
    d-Fall_08/ESE116HW2/skynet_main.c
    d-Fall_08/ESE116HW4/Backup/03-14-07/index.shtml
    d-Fall_08/ESE116HW4/Debug/Sltn/pointers.d
    d-Fall_08/ESE116HW4/Debug/Sltn/subdir.mk
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/Orig/debug.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/Orig/demo.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/Orig/pointers.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/Orig/subdir.mk
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/debug.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/newDebug.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/pointers-pre2007Spring.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/pointers.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/pointers2.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Backup/subdir.mk
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/debug.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/demo.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/p.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/pointers.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/stuff.d
    d-Fall_08/ESE116HW4/Debug/Supplied/Scratch/subdir.mk
    d-Fall_08/ESE116HW4/Debug/Supplied/demo.d
    d-Fall_08/ESE116HW4/Debug/Supplied/pointers.d
    d-Fall_08/ESE116HW4/Debug/Supplied/pointers_lab.d
    d-Fall_08/ESE116HW4/Debug/Supplied/pointers_main.d
    d-Fall_08/ESE116HW4/Debug/Supplied/subdir.mk
    d-Fall_08/ESE116HW4/Debug/makefile
    d-Fall_08/ESE116HW4/Debug/objects.mk
    d-Fall_08/ESE116HW4/Debug/sources.mk
    "d-Fall_08/ESE116HW4/Supplied/Backup/Orig/debug (1).c"
    d-Fall_08/ESE116HW4/Supplied/Backup/Orig/debug.c
    d-Fall_08/ESE116HW4/Supplied/Backup/Orig/demo.c
    d-Fall_08/ESE116HW4/Supplied/Backup/Orig/pointers.c
    d-Fall_08/ESE116HW4/Supplied/Backup/debug.c
    d-Fall_08/ESE116HW4/Supplied/Backup/newDebug.c
    d-Fall_08/ESE116HW4/Supplied/Backup/pointers-pre2007Spring.c
    d-Fall_08/ESE116HW4/Supplied/Backup/pointers.c
    d-Fall_08/ESE116HW4/Supplied/Backup/pointers2.c
    d-Fall_08/ESE116HW4/Supplied/Scratch/debug.c
    d-Fall_08/ESE116HW4/Supplied/Scratch/demo
    d-Fall_08/ESE116HW4/Supplied/Scratch/demo.c
    d-Fall_08/ESE116HW4/Supplied/Scratch/p.c
    d-Fall_08/ESE116HW4/Supplied/Scratch/pointers.c
    d-Fall_08/ESE116HW4/Supplied/Scratch/stuff.c
    d-Fall_08/ESE116HW4/Supplied/demo.c
    d-Fall_08/ESE116HW4/Supplied/pointers.c
    d-Fall_08/ESE116HW4/index.shtml
    d-Fall_08/ESE116HW4/speedCar.jpg
    d-Fall_08/ESE116HW5/Debug/grader/hw05-tester.d
    d-Fall_08/ESE116HW5/Debug/grader/subdir.mk
    d-Fall_08/ESE116HW5/Debug/makefile
    d-Fall_08/ESE116HW5/Debug/objects.mk
    d-Fall_08/ESE116HW5/Debug/sources.mk
    d-Fall_08/ESE116HW5/Debug/strings_sln.d
    d-Fall_08/ESE116HW5/Debug/subdir.mk
    d-Fall_08/ESE116HW5/Debug/tokenizer.d
    d-Fall_08/ESE116HW5/Debug/tokenizer_main.d
    d-Fall_08/ESE116HW5/grader/hw05-tester
    d-Fall_08/ESE116HW5/grader/hw05-tester.c
    d-Fall_08/ESE116HW5/grader/hw05.conf
    d-Fall_08/ESE116HW5/grader/Makefile.hw5
    d-Fall_08/ESE116HW5/grader/testGetChar.c
    d-Fall_08/ESE116HW5/grader/testGetChar.h
    d-Fall_08/ESE116HW5/grader/testGetWord.c
    d-Fall_08/ESE116HW5/grader/testGetWord.h
    d-Fall_08/ESE116HW5/grader/testSortAndDeleteDuplicates.c
    d-Fall_08/ESE116HW5/grader/testSortAndDeleteDuplicates.h
    d-Fall_08/ESE116HW5/grader/tokenizer.c
    d-Fall_08/ESE116HW5/grader/tokenizer.h
    d-Fall_08/ESE116HW5/stln/stringsPic.ppt
    d-Fall_08/ESE116HW5/stln/test.txt
    d-Fall_08/ESE116HW5/stln/tokenizer
    d-Fall_08/ESE116HW5/stln/tokenizer.c
    d-Fall_08/ESE116HW5/stln/tokenizer.h
    d-Fall_08/ESE116HW5/stln/tokenizer_main.c
    d-Fall_08/ESE116HW5/sample_output.txt
    d-Fall_08/ESE116HW5/tokenizer.c
    d-Fall_08/ESE116HW5/tokenizer.h
    d-Fall_08/ESE116HW5/tokenizer.html
    d-Fall_08/ESE116HW5/tokenizer_main.c
    d-Fall_08/ESE116HW5/tokenizer_pic.png
    d-Fall_08/ESE116HW6/Debug/Sltn/subdir.mk
    d-Fall_08/ESE116HW6/Debug/Sltn/weatherFunctions.d
    d-Fall_08/ESE116HW6/Debug/Sltn/weatherTest.d
    d-Fall_08/ESE116HW6/Debug/Supplied/subdir.mk
    d-Fall_08/ESE116HW6/Debug/Supplied/weatherFunctions.d
    d-Fall_08/ESE116HW6/Debug/Supplied/weatherTest.d
    d-Fall_08/ESE116HW6/Debug/makefile
    d-Fall_08/ESE116HW6/Debug/sources.mk
    d-Fall_08/ESE116HW6/Sltn/Makefile
    d-Fall_08/ESE116HW6/Sltn/sample_interactions.txt
    d-Fall_08/ESE116HW6/Sltn/testInput.txt
    d-Fall_08/ESE116HW6/Sltn/weather
    d-Fall_08/ESE116HW6/Sltn/weather.h
    d-Fall_08/ESE116HW6/Sltn/weatherFunctions.c
    d-Fall_08/ESE116HW6/Sltn/weatherTest.c
    d-Fall_08/ESE116HW6/Supplied/Makefile
    d-Fall_08/ESE116HW6/Supplied/sampleInteractions.txt
    d-Fall_08/ESE116HW6/Supplied/testInput.txt
    d-Fall_08/ESE116HW6/Supplied/weather.h
    d-Fall_08/ESE116HW6/Supplied/weatherFunctions.c
    d-Fall_08/ESE116HW6/Supplied/weatherTest.c
    d-Fall_08/ESE116HW6/index.shtml
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/annotated.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/cassert_8c.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/cassert_8h-source.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/cassert_8h.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/ctester-defs_8h-source.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/ctester-defs_8h.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/ctester_8c.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/ctester_8h-source.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/ctester_8h.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/doxygen.css
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/doxygen.png
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/files.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/functions.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/functions_vars.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_defs.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_enum.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_eval.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_func.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_type.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/globals_vars.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/index.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/struct__ct__str__buffer.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/structproblem__t.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/structtest__t.html
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/tab_b.gif
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/tab_l.gif
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/tab_r.gif
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/doc/html/tabs.css
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hw01-tester.dSYM/Contents/Resources/DWARF/hw01-tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hw01-tester.dSYM/Contents/Info.plist
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hal.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hal.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hw01-tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hw01-tester.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/hw01.conf
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/lcheng.tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw01tests/Makefile.hw1
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/hw03-tester.dSYM/Contents/Resources/DWARF/hw03-tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/hw03-tester.dSYM/Contents/Info.plist
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/a.out
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/hw03-tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/hw03-tester.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/hw03.conf
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/lcheng.tester
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/Makefile.hw3
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/packets.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/packets.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/examples/hw03tests/packets_main.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/bool.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/cassert.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/cgrader.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/ctester.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/ese_malloc.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/linked_list.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/problem.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/stringbuf.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/include/test.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/lib/libctester.a
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/bool.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/cassert.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/cassert.h
    "d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/cgrader (1).h"
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/cgrader.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/cgrader.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/ctester.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/ctester.h
    "d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/ese_malloc (1).c"
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/ese_malloc.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/ese_malloc.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/libctester.a
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/linked_list.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/linked_list.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/Makefile
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/problem.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/problem.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/stringbuf.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/test.c
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/src/test.h
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/dox_ctester.config
    d-Fall_08/ESE116HW7/Sltn/ctester_v3/README
    d-Fall_08/ESE116HW7/Sltn/hw07-tester.dSYM/Contents/Resources/DWARF/hw07-tester
    d-Fall_08/ESE116HW7/Sltn/hw07-tester.dSYM/Contents/Info.plist
    d-Fall_08/ESE116HW7/Sltn/hw07-tester
    d-Fall_08/ESE116HW7/Sltn/hw07-tester.c
    d-Fall_08/ESE116HW7/Sltn/Makefile
    d-Fall_08/ESE116HW7/Sltn/malloc.c
    d-Fall_08/ESE116HW7/Supplied/index.html
    d-Fall_08/ESE116HW7/Supplied/malloc.c
    d-Fall_08/hw04tester/hw04-tester
    d-Fall_08/hw04tester/hw04-tester.c
    d-Fall_08/hw04tester/hw04.conf
    d-Fall_08/hw04tester/Makefile.hw4
    d-Fall_08/hw04tester/pointers.c
    d-Fall_08/hw04tester/pointers.h
    d-Fall_08/hw04tester/pointers_main.c
    d-Fall_08/hw04tester/testPointerToLastWord.c
    d-Fall_08/hw04tester/testPointerToLastWord.h
    d-Fall_08/hw04tester/testPointerToVowel.c
    d-Fall_08/hw04tester/testPointerToVowel.h
    d-Fall_08/hw04tester/testReverse.c
    d-Fall_08/hw04tester/testReverse.h
    "d-Fall_08/lab 1 - unix/unixfilesystem.jpg"
    "d-Fall_08/lab 1 - unix/unixGettingStarted.html"
    "d-Fall_08/lab 1 - unix/unixlinuxtimeline.jpg"
    d-Fall_08/arrayIntro.pdf
    d-Fall_08/lilBitOfPreprocessor.pdf
    "d-Fall_08/quiz 1 question.txt"
    d-Fall_08/review_quiz1.html
    d-Fall_08/review_quiz2_v2.html
    d-Fall_08/review_quiz3.html
    e-Spring_09/ctesterTutorial/doc/html/annotated.html
    e-Spring_09/ctesterTutorial/doc/html/cassert_8c.html
    e-Spring_09/ctesterTutorial/doc/html/cassert_8h-source.html
    e-Spring_09/ctesterTutorial/doc/html/cassert_8h.html
    e-Spring_09/ctesterTutorial/doc/html/ctester-defs_8h-source.html
    e-Spring_09/ctesterTutorial/doc/html/ctester-defs_8h.html
    e-Spring_09/ctesterTutorial/doc/html/ctester_8c.html
    e-Spring_09/ctesterTutorial/doc/html/ctester_8h-source.html
    e-Spring_09/ctesterTutorial/doc/html/ctester_8h.html
    e-Spring_09/ctesterTutorial/doc/html/doxygen.css
    e-Spring_09/ctesterTutorial/doc/html/doxygen.png
    e-Spring_09/ctesterTutorial/doc/html/files.html
    e-Spring_09/ctesterTutorial/doc/html/functions.html
    e-Spring_09/ctesterTutorial/doc/html/functions_vars.html
    e-Spring_09/ctesterTutorial/doc/html/globals.html
    e-Spring_09/ctesterTutorial/doc/html/globals_defs.html
    e-Spring_09/ctesterTutorial/doc/html/globals_enum.html
    e-Spring_09/ctesterTutorial/doc/html/globals_eval.html
    e-Spring_09/ctesterTutorial/doc/html/globals_func.html
    e-Spring_09/ctesterTutorial/doc/html/globals_type.html
    e-Spring_09/ctesterTutorial/doc/html/globals_vars.html
    e-Spring_09/ctesterTutorial/doc/html/index.html
    e-Spring_09/ctesterTutorial/doc/html/struct__ct__str__buffer.html
    e-Spring_09/ctesterTutorial/doc/html/structtest__t.html
    e-Spring_09/ctesterTutorial/doc/html/tab_b.gif
    e-Spring_09/ctesterTutorial/doc/html/tab_l.gif
    e-Spring_09/ctesterTutorial/doc/html/tab_r.gif
    e-Spring_09/ctesterTutorial/doc/html/tabs.css
    e-Spring_09/ctesterTutorial/grading_tutorial.html
    e-Spring_09/ctesterTutorial/hal.c
    e-Spring_09/ctesterTutorial/hal.h
    e-Spring_09/ctesterTutorial/hal_main.c
    e-Spring_09/ctesterTutorial/hw01-tester.c
    e-Spring_09/ctesterTutorial/hw01.conf
    e-Spring_09/ctesterTutorial/Makefile.hw1
    e-Spring_09/GettingStarted_version3/Supplied/demo.c
    e-Spring_09/GettingStarted_version3/Supplied/pointers_lab.c
    e-Spring_09/GettingStarted_version3/index.shtml
    e-Spring_09/GettingStarted_version3/speedCar.jpg
    e-Spring_09/LegoLab1/lab1.nxc
    e-Spring_09/LegoLab1/lego_robot_pic.jpg
    e-Spring_09/LegoLab1/LegoLab1.html
    e-Spring_09/LegoLab1/nbc
    e-Spring_09/LegoLab1/NeXTTool
    e-Spring_09/LegoLab1/t2n
    e-Spring_09/LegoLab1.tar.gz
    e-Spring_09/review_quiz2_v3.html
    e-Spring_09/reviewUnix.pdf
    slides/arrayIntro.pdf
    slides/binaryDecimalHex.pdf
    slides/bitwiseOperators.pdf
    slides/comparedToJava.pdf
    slides/gettingStarted.pdf
    slides/introToMemory.pdf
    slides/lilBitOfPreprocessor.pdf
    slides/mallocFree.pdf
    slides/pointersGettingStarted.pdf
    slides/strings_v2.pdf
    slides/structPointers.pdf
    slides/structs.pdf
    README.md)

add_executable(c_programming ${SOURCE_FILES})